<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@id/mainFields__bottomNavigation__map"
    android:enabled="true"
    android:icon="@drawable/ic_map"
    android:title="@string/map"
    app:showAsAction="ifRoom" />
  <item
    android:id="@id/mainFields__bottomNavigation__point"
    android:enabled="true"
    android:icon="@drawable/ic_rank"
    android:title="@string/point"
    app:showAsAction="ifRoom" />
  <item
    android:id="@id/mainFields__bottomNavigation__post"
    android:enabled="true"
    android:icon="@drawable/ic_upload"
    android:title="@string/select_menu"
    app:showAsAction="ifRoom" />
  <item
    android:id="@id/mainFields__bottomNavigation__timer"
    android:enabled="true"
    android:icon="@drawable/ic_timer"
    android:title="@string/out"
    app:showAsAction="ifRoom" />
</menu>