<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@id/outlist__bottomSheet__title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/jokerInfoBuy"
    android:textAlignment="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:textSize="18sp"/>

  <TextView
    android:id="@id/outlist__bottomSheet__message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/use2000point"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:textSize="24sp"
    android:textColor="@color/md_red_800"
    android:textAlignment="center"/>

  <Button
    android:id="@id/outlist__bottomSheet__joker1BuyBtn"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:text="@string/joker1InfoBuy"
    android:textSize="20sp" />

  <Button
    android:id="@id/outlist__bottomSheet__joker2BuyBtn"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:text="@string/joker2InfoBuy"
    android:textSize="20sp"/>

</LinearLayout>