<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@id/login_activity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/md_white_1000">

  <include
    android:id="@+id/include2"
    layout="@layout/toolbar" />

  <ImageView
    android:id="@id/login__company_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:contentDescription="@string/map"
    android:visibility="gone"/>

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <EditText
      android:id="@id/login__passwordEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:ems="10"
      android:hint="@string/passwordHint"
      android:inputType="numberPassword"
      android:textAlignment="center" />
    <Button
      android:id="@id/login__completeBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/complete" />
  </LinearLayout>
</android.support.constraint.ConstraintLayout>
