<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_constraintLeft_creator="1"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@+id/register__complete"
    app:layout_constraintVertical_bias="0.501">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@id/register__joker1_container">

      <android.support.design.widget.TextInputLayout
        android:id="@id/register__joker1NameEditText_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/joker1"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/register__joker1InfoBtn"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.design.widget.TextInputEditText
          android:id="@id/register__joker1NameEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="32sp"/>

      </android.support.design.widget.TextInputLayout>
      <Button
        android:id="@id/register__joker1InfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/joker_info_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@id/register__joker2_container">

      <android.support.design.widget.TextInputLayout
        android:id="@id/register__joker2NameEditText_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/joker2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/register__joker2InfoBtn"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
          android:textSize="32sp"
          android:id="@id/register__joker2NameEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      </android.support.design.widget.TextInputLayout>
      <Button
        android:id="@id/register__joker2InfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/joker_info_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

  </LinearLayout>

  <Button
    android:id="@id/register__complete"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:text="@string/complete"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>